# Roobar3000

./: Cargo.toml  Roobar3000_STRUCTURE.md
rust-core/: Cargo.toml
rust-core/src/: lib.rs  main.rs
rust-core/src/audio/: buffer_pool.rs  clock.rs  engine.rs  format.rs  mod.rs  player.rs
rust-core/src/config/: audio.rs  manager.rs  mod.rs
rust-core/src/decoder/: mod.rs  resampler.rs  stream.rs  symphonia_backend.rs
rust-core/src/dsp/: eq.rs  mod.rs  processor.rs  resampler_engine.rs
rust-core/src/ipc/: handlers.rs  mod.rs  protocol.rs  server.rs
rust-core/src/output/: backend.rs  bitperfect.rs  device.rs  mod.rs  wasapi.rs
rust-core/src/utils/: cache.rs  error.rs  logging.rs  metrics.rs  mod.rs
