[workspace]
members = [
    "rust-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Roobar3000 Team"]
license = "MIT"

[workspace.dependencies]
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
cpal = "0.15"
ringbuf = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
rusqlite = { version = "0.31", features = ["bundled"] }
lofty = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
notify = "6.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
atomic_refcell = "0.1"
