[package]
name = "rust-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
symphonia = { workspace = true }
rubato = { workspace = true }
cpal = { workspace = true }
ringbuf = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
rusqlite = { workspace = true, optional = true }
lofty = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
thiserror = { workspace = true }
anyhow = { workspace = true }
notify = { workspace = true }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }
atomic_refcell = { workspace = true }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
